--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Weather</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="left-header"></div>
+        <div class="right-header"></div>
+    </header>
 </body>
 </html>
